--- a/front_end/src/index.css
+++ b/front_end/src/index.css
@@ -18,6 +18,16 @@ code {
     monospace;
 }
 
+a {
+  text-decoration: none;
+  color: black
+}
+
+a:hover {
+  text-decoration: none;
+  color: white
+}
+
 .bg-primary  {
   background-color: var(--main-color) !important;
 }
@@ -26,3 +36,4 @@ code {
   background-color: var(--main-color) !important;
   border-color: var(--main-color) !important;
 }
+
