added more front-end formatting

--- a/front_end/src/App.css
+++ b/front_end/src/App.css
@@ -3,5 +3,10 @@
 }
 
 .main-body {
-  height: 100vh
+  height: 100vh;
+  background-image: url(./background.svg);
+  background-repeat: no-repeat;
+  background-size: 125%;
+  background-position: center;
+
 }
