--- a/front_end/src/index.css
+++ b/front_end/src/index.css
@@ -10,11 +10,23 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  height: 100%
+  min-height: 100vh;
+  background-image: url(./background.svg);
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
 }
 
 p, h1 {
   color: white
+}
+
+h1 {
+  font-size: 5vmin;
+}
+
+p {
+  font-size: 3vmin;
 }
 
 code {
@@ -37,8 +49,7 @@ a:hover, .btn > a:hover {
 }
 
 .btn {
-  margin: 3rem !important;
-  padding: 0.5rem 3rem !important;
+  padding: 0.5rem 2rem !important;
   border-radius: 3rem;
   color:white !important
 }
@@ -52,3 +63,6 @@ a:hover, .btn > a:hover {
   border-color: var(--main-color) !important;
 }
 
+.text-muted {
+  color: var(--main-color) !important
+}
